# garnix

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  OLD.md  README.md  SYNTAX-SAMMLUNG.md  TODO.md  bach.bak  flake.nix  interesting.md  questions.md
infer/: Cargo.toml
infer/src/: README.md  ast.rs  context.rs  error.rs  helpers.rs  hm.rs  infer.rs  lib.rs  lower.rs  main.rs  module.rs  parreaux.rs  types.rs
infer/src/tests/: infer.rs
lsp/: Cargo.toml  README.md
lsp/src/: main.rs  utils.rs
parser/: Cargo.toml  READEM.md
parser/src/: ast.rs  infer.rs  lexer.rs  lib.rs  main.rs  parser.rs
parser/src/infer/: ast.rs  helpers.rs  hm.rs  mod.rs
parser/src/test/: parser.rs
parser2/: Cargo.toml
parser2/src/: ast.rs  kind.rs  lexer.rs  lib.rs  parser.rs  tests.rs
proposal/: nlnet25.md
spec/archive/: pearreaux.typ
spec/masterproject/: masterarbeit.typ  record_calc.typ
spec/masterproject/bib/: castagna.bib  parreaux.bib  records.bib
spec/masterproject/dailies/: 25-12-21.typ  25-12-30.typ  26-01-01.typ  26-01-12.typ  26-01-15.typ  26-01-28.typ  26-02-11.typ  26-02-12.typ  26-02-16.typ  26-02-17.typ  26-02-23.typ  26-02-27.typ
spec/masterthesis/: algorithmic.typ  algorithmic_ideas.typ  blocked.typ  brainstorming.typ  constraining.typ  example_derivations.typ  examples.typ  flake.nix  glossar.md  literatur.typ  masterarbeit.typ  minimal.typ  notation.md  paper-proofs.typ  proof-state.md  record-ts.md  record_calc.typ  thesis.typ  tmp.md  yay_nay.typ
specification/: .#main.agda  Bachelor Thesis.pdf.sioyek.annotations  aboutinference.typ  all.bib  builtin-types.typ  comparison.typ  final.typ  functions.typ  main.agda  main.lagda.md  nix-examples.md  nix_foundations.typ  overview.typ  playground.typ  rec-spec.typ  record_calc.typ  typesystem.typ
specification/.helix/: languages.toml
specification/archive/: antrag.typ  improving_nothing.typ  pearreaux.typ  snips.typ
specification/bib/: algebraic-subtyping.bib  castagna.bib  gradual.bib  invalml.bib  misc.bib  mlstruct.bib  mlsub-short.bib  nix.bib  nixos.bib  original.bib  parreaux.bib  records.bib  simple-sub.bib  superf.bib  types.bib
specification/dailies/: 25-01-01.typ  25-12-15.typ  25-12-19.typ  25-12-21.typ  26-01-02.typ  26-01-06.typ  26-01-14.typ  26-01-15.typ  26-01-16.typ  26-01-27.typ  26-01-29.typ  26-02-10.typ  26-02-11.typ  26-02-12.typ  26-02-16.typ  26-02-17.typ  26-02-18.typ  26-02-21.typ  26-02-23.typ  26-02-26.typ  26-02-27.typ
specification/eopl-lecture-notes/: Lecture1.lagda.md  Lecture10.lagda.md  Lecture11.lagda.md  Lecture12.lagda.md  Lecture13.lagda.md  Lecture2.lagda.md  Lecture3.lagda.md  Lecture6.lagda.md  Lecture9.lagda.md  lib.agda-lib
specification/figures/: builtin-types.typ  comparison.typ  module-types.typ  reduction-compare.typ  ts-compare.typ
specification/notes/: notes_thiemann_251126.md  notes_thiemann_260216.md  notes_thiemann_261125.md  notes_thiemann_271025.md
specification/sections/: connectives.typ  first-class-labels.typ  modulesystem.typ  occurrence.typ  records.typ  related_work.typ  ts-discussion.typ
specification/snips/: builtin-types.typ  comparison.typ  feats.typ  first-class-labels.typ  gradual.typ  implementation.typ  misc.typ  nix-module.typ  occurrence.typ  records.typ  runes.typ  ts-compare.typ  ts-discussion.typ  tss.typ  type-dsl.typ  typesystemdiscussion.typ
src/: ast.rs  error.rs  infer.rs  lexer.rs  lib.rs  parser.rs
src/test/: mod.rs  parser.rs
test-data/: code-extensions.nix  interesting.nix  simple.nix
testdata/: importdef.sexp  lib.nix  nix-files.md  script.nu
(+76 files in other folders)
