[package]
name = "infer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

logos = "*"
strum = "*"
strum_macros = "*"
anyhow = "*"
thiserror = "*"
parser = { path = "../parser" }
nom = "*"
itertools = "*"
