[package]
name = "infer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "*"
strum_macros = "*"
anyhow = "*"
thiserror = "*"
parser2 = { path = "../parser2" }
salsa = "*"
itertools = "*"
annotate-snippets = "*"
ordered-float = "*"
smol_str = "*"
la-arena = "*"
expect-test.workspace = true
