[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lsp = { version = "0.2.0", features = ["tokio"] }
parser = { path = "../parser" }
infer = { path = "../infer" }
tokio = { version = "1.27.0", features = ["macros", "rt", "time"] }
tokio-util = { version = "0.7.8", features = ["compat"] }
lsp-types = "*"
tower = "*"
tracing = "*"
tracing-subscriber = "0.3.16"
anyhow = "1.0.44"
