[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-lsp = { workspace = true }
infer = { path = "../infer" }
tokio = { workspace = true }
tokio-util = { workspace = true }
lsp-types = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
