[package]
name = "parser2"
version.workspace = true
edition.workspace = true

[dependencies]
once_cell = { workspace = true }
regex-automata = { workspace = true }
rowan = { workspace = true }
salsa = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
walkdir = { workspace = true }
expect-test = { workspace = true }

[[bench]]
name = "parse"
harness = false

